--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "kopilka2",
-  "version": "1.0.0",
-  "private": "false",
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
-    "cookie-universal-nuxt": "^2.2.2",
-    "core-js": "^3.25.3",
-    "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "vue-the-mask": "^0.11.1",
-    "vuelidate": "^0.7.7",
-    "vuetify": "^2.6.10"
-  },
-  "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3"
-  }
+    "name": "kopilka2",
+    "version": "1.0.0",
+    "private": "false",
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "predeploy": "nuxt generate",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "@nuxtjs/axios": "^5.13.6",
+        "cookie-universal-nuxt": "^2.2.2",
+        "core-js": "^3.25.3",
+        "nuxt": "^2.15.8",
+        "vue": "^2.7.10",
+        "vue-server-renderer": "^2.7.10",
+        "vue-template-compiler": "^2.7.10",
+        "vue-the-mask": "^0.11.1",
+        "vuelidate": "^0.7.7",
+        "vuetify": "^2.6.10"
+    },
+    "devDependencies": {
+        "@nuxtjs/vuetify": "^1.12.3",
+        "gh-pages": "^5.0.0"
+    }
 }
